--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>Derivado de "Proyecto: página web de viajes"</title>
     </head>
+    <link rel="stylesheet" type="text/CSS" href="https://luissanher3.github.io/pinocho.css>
     <style>
-    h1{
+    /*h1{
         color:rgb(112, 115, 21);
     }
         .pinpon{
@@ -18,7 +19,7 @@
         .jiji{
             background-color:rgb(235, 230, 235);
         
-        }
+        }*/
     </style>
     <body>
     
