--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Derivado de "Proyecto: página web de viajes"</title>
     </head>
-    <link rel="stylesheet" type="text/css" href="https://luissanher3.github.io/pinocho.css>
+    <link rel="stylesheet" type="text/css" href="https://luissanher3.github.io/pinocho.css">
     <style>
     /* h1{
         color:rgb(112, 115, 21);
